codestyle fixes